PCS BAckup 26Dec2023/Backup-Source/objects/Vision_GCP_Short_Date__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Customer_Code__c</fullName>
        <label>GCP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Customer_Name__c</fullName>
        <label>GCP Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Updated_Date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Month_Written_Off_Cost__c</fullName>
        <formula>Vision_Last_Month_Written_Off_QTY__c * Vision_FTO_Cost_dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month Written Off Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Data_Pull_Date__c</fullName>
        <description>We will update this field when we are pulling data from GCP</description>
        <label>Vision Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Month_Order_Quantity__c</fullName>
        <label>GCP Current Month Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP Short Date</relationshipLabel>
        <relationshipName>GCP_Short_Date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Dollar_Writen_Off__c</fullName>
        <formula>Vision_qty_written_off__c  *  Vision_FTO_Cost_dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Dollar Writen Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_FTO_Cost_dollar__c</fullName>
        <label>FTO Cost Dollar</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Forecast_Month_1__c</fullName>
        <label>Forecast Month 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Forecast_Month_2__c</fullName>
        <label>Forecast Month 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Forecast_Month_3__c</fullName>
        <label>Forecast Month 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Total_Writeoff_Costs_3_Months__c</fullName>
        <label>GCP Total Writeoff Costs 3 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Total_Writeoff_Units_3_Months__c</fullName>
        <label>GCP Total Writeoff Units 3 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_3_Months_PWO__c</fullName>
        <description>This field returns true or false. If any one of three months potential write off fields are greater than Zero</description>
        <formula>OR(Vision_M1_Potential_Write_Off__c &gt; 0, Vision_M2_Potential_Write_Off__c &gt; 0 , Vision_M3_Potential_Write_Off__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is 3 Months PWO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_9_months_PWO__c</fullName>
        <description>This field returns true or false. If any one of 9 months potential write off fields are greater than Zero</description>
        <formula>OR(Vision_M1_Potential_Write_Off__c &gt; 0, Vision_M2_Potential_Write_Off__c &gt; 0 , Vision_M3_Potential_Write_Off__c &gt; 0,Vision_M4_Potential_Write_Off__c &gt; 0, Vision_M5_Potential_Write_Off__c &gt; 0 , Vision_M6_Potential_Write_Off__c &gt; 0,Vision_M7_Potential_Write_Off__c &gt; 0, Vision_M8_Potential_Write_Off__c &gt; 0 , Vision_M9_Potential_Write_Off__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is 9 months PWO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Last_Month_Written_Off_QTY__c</fullName>
        <label>Last Month Written Off QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M1_Potential_Write_Off__c</fullName>
        <label>M1 Potential Write Off</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M1_Short_Date__c</fullName>
        <label>M1 Short Date</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M1_Write_Off_Cost__c</fullName>
        <label>M1 Write Off Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M2_Potential_Write_Off__c</fullName>
        <label>M2 Potential Write Off</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M2_Short_Date__c</fullName>
        <label>M2 Short Date</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M2_Write_Off_Cost__c</fullName>
        <label>M2 Write Off Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M3_Potential_Write_Off__c</fullName>
        <label>M3 Potential Write Off</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M3_Short_Date__c</fullName>
        <label>M3 Short Date</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_M3_Write_Off_Cost__c</fullName>
        <label>M3 Write Off Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Month_1__c</fullName>
        <label>Month 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Month_2__c</fullName>
        <label>Month 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Month_3__c</fullName>
        <label>Month 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Pack_Size__c</fullName>
        <label>Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision_Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP Short Date</relationshipLabel>
        <relationshipName>GCP_Short_Date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_SAP_Part_Number__c</fullName>
        <label>SAP Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Total_in_Units__c</fullName>
        <label>Total in Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_value_dollar__c</fullName>
        <label>Total Value Dollar</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_qty_written_off__c</fullName>
        <label>QTY Written Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_total_qty__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>GCP Short Date</label>
    <nameField>
        <displayFormat>GCP short-date-{0000000}</displayFormat>
        <label>GCP  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Short Date</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>